# QRNN

./: .gitignore  README.md  pyproject.toml
QRNN/: dataset_comparison.ipynb  mapped_rnn.py  model_fit_evaluate.py  qrnn_rnn_comparison.ipynb  qubit_rnn.py  simple_lstm.py  simple_rnn.py  sinusoidal.py  stock_loader.py  tracker.py
